basic html/css done, need to write js code (format game as object), and add bonus styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <h1>Press any key to get started!</h1>
+    <h3>Wins: 0</h3>
+    <h3>Losses: 0</h3> 
+    <h3>Remaining Guesses: 9</h3>
+    <h3>Letters Guessed: </h3>
+    <h3>Word: </h3>
 </body>
 </html>
