reference to choices not working bc object property, reread directions

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <h1>Press any key to get started!</h1>
-    <h3>Wins: 0</h3>
-    <h3>Losses: 0</h3> 
-    <h3>Remaining Guesses: 9</h3>
-    <h3>Letters Guessed: </h3>
-    <h3>Word: </h3>
+    <h3 id="wins">Wins: 0</h3>
+    <h3 id="losses">Losses: 0</h3> 
+    <h3 id="remGuess">Remaining Guesses: 9</h3>
+    <h3 id="letGuess">Letters Guessed: </h3>
+    <h3 id="word">Word: </h3>
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
