--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Press any key to get started!</h1>
-    <h3 id="wins">Wins: 0</h3>
-    <h3 id="losses">Losses: 0</h3> 
-    <h3 id="remGuess">Remaining Guesses: 9</h3>
-    <h3 id="letGuess">Letters Guessed: </h3>
-    <h3 id="word">Word: </h3>
+    <div>
+        <h1>Press any key to get started!</h1>
+        <h3 id="wins">Wins: 0</h3>
+        <h3 id="losses">Losses: 0</h3> 
+        <h3 id="remGuess">Remaining Guesses: 9</h3>
+        <h3 id="letGuess">Letters Guessed: </h3>
+        <h3 id="word">Word: </h3>
+        <audio id="fight">
+            <source src="assets/sounds/fight.mp3" type="audio/mpeg">
+        </audio>
+    </div>
     <script src="assets/javascript/game.js"></script>
 </body>
 </html>
